# rust-jsonschema

./: Cargo.toml  Makefile
src/: cli.rs  draft.rs  lib.rs  loader.rs  main.rs
src/cmd/: generate.rs
src/draft/: draft2020_12.rs
tests/: loader.rs
tests/test_data/loader/: schema.broken.json  schema.broken.yaml  schema.not_implemented.json  schema.wrong.json
