[package]
name = "jsonschema"
version = "0.1.0"
edition = "2021"
authors = ["Claudio Beatrice <claudi0.beatric3@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "jsonschema"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
serde_yaml = "0.9.34"
